--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
         android:id="@+id/home_rxtitle"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/bg_toolbar_primary"
         app:title="首页"
         app:titleColor="@color/white"/>
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
