--- a/app/src/main/res/layout/activity_toast.xml
+++ b/app/src/main/res/layout/activity_toast.xml
@@ -10,25 +10,60 @@
         android:id="@+id/toast_rxtitle"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/bg_toolbar_primary"
         app:title="Toast_LabelsView"
         app:titleColor="@color/white" />
 
-    <com.veni.rxtools.view.LabelsView
-        android:id="@+id/toast_labels"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/toast_refreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:labelBackground="@drawable/zz_selector_lable"
-        app:labelTextColor="@drawable/zz_lable_text_color"
-        android:layout_margin="@dimen/hight_10"
-        app:labelTextPaddingBottom="@dimen/hight_5"
-        app:labelTextPaddingLeft="@dimen/hight_10"
-        app:labelTextPaddingRight="@dimen/hight_10"
-        app:labelTextPaddingTop="@dimen/hight_5"
-        app:labelTextSize="@dimen/font_14"
-        app:lineMargin="@dimen/hight_10"
-        app:maxSelect="5"
-        app:selectType="SINGLE"
-        app:wordMargin="@dimen/hight_10" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        app:srlAccentColor="@android:color/white"
+        app:srlEnableHeaderTranslationContent="true"
+        app:srlEnableNestedScrolling="true"
+        app:srlEnablePreviewInEditMode="true"
+        app:srlPrimaryColor="@color/colorPrimary">
+
+        <!--<com.scwang.smartrefresh.header.MaterialHeader-->
+        <!--android:id="@+id/header"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="?attr/actionBarSize"/>-->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+            <com.veni.rxtools.view.LabelsView
+                android:id="@+id/toast_labels"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/hight_10"
+                app:labelBackground="@drawable/zz_selector_lable"
+                app:labelTextColor="@drawable/zz_lable_text_color"
+                app:labelTextPaddingBottom="@dimen/hight_5"
+                app:labelTextPaddingLeft="@dimen/hight_10"
+                app:labelTextPaddingRight="@dimen/hight_10"
+                app:labelTextPaddingTop="@dimen/hight_5"
+                app:labelTextSize="@dimen/font_14"
+                app:lineMargin="@dimen/hight_10"
+                app:maxSelect="5"
+                app:selectType="SINGLE"
+                app:wordMargin="@dimen/hight_10" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/toast_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
 </LinearLayout>
