--- a/rxtools/src/main/res/values/styles.xml
+++ b/rxtools/src/main/res/values/styles.xml
@@ -60,8 +60,8 @@
     </style>
 
     <style name="normalDialogAnim" parent="android:Animation">
-        <item name="@android:windowEnterAnimation">@anim/normal_dialog_enter</item>
-        <item name="@android:windowExitAnimation">@anim/normal_dialog_exit</item>
+        <item name="android:windowEnterAnimation">@anim/normal_dialog_enter</item>
+        <item name="android:windowExitAnimation">@anim/normal_dialog_exit</item>
     </style>
 
     <style name="SpinKitView">
