--- a/app/src/main/res/layout/fragment_function_item.xml
+++ b/app/src/main/res/layout/fragment_function_item.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:gravity="center"
-    android:background="@drawable/selectorbtn_white_whitesmoke"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/function_item_ll"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:gravity="center"
+        android:background="@drawable/selectorbtn_white_whitesmoke"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/function_item_iv"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginBottom="@dimen/hight_5"
+            android:visibility="gone"
+            android:src="@mipmap/ic_launcher" />
 
-    <ImageView
-        android:id="@+id/function_item_iv"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="@dimen/hight_5"
-        android:visibility="gone"
-        android:src="@mipmap/ic_launcher" />
+        <TextView
+            android:id="@+id/function_item_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="name"
+            android:textSize="12sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/function_item_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:textSize="12sp" />
 
 </LinearLayout>
