--- a/app/src/main/res/layout/activity_toast.xml
+++ b/app/src/main/res/layout/activity_toast.xml
@@ -30,39 +30,44 @@
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_marginTop="?attr/actionBarSize"/>-->
-        <ScrollView
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/toast_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            android:layout_height="match_parent" />
+        <!--<ScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:scrollbars="none">-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="vertical">-->
 
 
-            <com.veni.rxtools.view.LabelsView
-                android:id="@+id/toast_labels"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/hight_10"
-                app:labelBackground="@drawable/zz_selector_lable"
-                app:labelTextColor="@drawable/zz_lable_text_color"
-                app:labelTextPaddingBottom="@dimen/hight_5"
-                app:labelTextPaddingLeft="@dimen/hight_10"
-                app:labelTextPaddingRight="@dimen/hight_10"
-                app:labelTextPaddingTop="@dimen/hight_5"
-                app:labelTextSize="@dimen/font_14"
-                app:lineMargin="@dimen/hight_10"
-                app:maxSelect="5"
-                app:selectType="SINGLE"
-                app:wordMargin="@dimen/hight_10" />
+            <!--<com.veni.rxtools.view.LabelsView-->
+                <!--android:id="@+id/toast_labels"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/hight_10"-->
+                <!--app:labelBackground="@drawable/zz_selector_lable"-->
+                <!--app:labelTextColor="@drawable/zz_lable_text_color"-->
+                <!--app:labelTextPaddingBottom="@dimen/hight_5"-->
+                <!--app:labelTextPaddingLeft="@dimen/hight_10"-->
+                <!--app:labelTextPaddingRight="@dimen/hight_10"-->
+                <!--app:labelTextPaddingTop="@dimen/hight_5"-->
+                <!--app:labelTextSize="@dimen/font_14"-->
+                <!--app:lineMargin="@dimen/hight_10"-->
+                <!--app:maxSelect="5"-->
+                <!--app:selectType="SINGLE"-->
+                <!--app:wordMargin="@dimen/hight_10" />-->
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/toast_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-            </LinearLayout>
-        </ScrollView>
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/toast_recyclerview"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent" />-->
+            <!--</LinearLayout>-->
+        <!--</ScrollView>-->
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
