--- a/app/src/main/res/layout/activity_toast_spink.xml
+++ b/app/src/main/res/layout/activity_toast_spink.xml
@@ -10,12 +10,7 @@
     <com.veni.rxtools.view.progressing.SpinKitView
         android:id="@+id/spink_item"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateOnly="true"
-        android:maxHeight="@dimen/hight_60"
-        android:maxWidth="@dimen/hight_60"
-        android:minHeight="@dimen/hight_60"
-        android:minWidth="@dimen/hight_60" />
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/spink_tv"
