--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
-    <com.veni.tools.view.RxTitle
+    <com.veni.tools.view.TitleView
         android:id="@+id/home_rxtitle"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
