--- a/tools-library/src/main/res/layout/rx_title_layout.xml
+++ b/tools-library/src/main/res/layout/rx_title_layout.xml
@@ -6,7 +6,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-    <com.veni.tools.view.RxTextAutoZoom
+    <com.veni.tools.view.TextAutoZoom
         android:id="@+id/tv_rx_title"
         android:layout_width="200dp"
         android:layout_height="match_parent"
