--- a/app/src/main/res/layout/activity_heartlike.xml
+++ b/app/src/main/res/layout/activity_heartlike.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/whitesmoke"
     android:orientation="vertical">
 
     <com.veni.tools.view.TitleView
@@ -22,6 +22,48 @@
         android:layout_height="match_parent"
         android:padding="@dimen/hight_16">
 
+
+        <com.veni.tools.view.heart.HeartLayout
+            android:id="@+id/heart_layout"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_alignRight="@+id/tv_hv"
+            android:layout_marginBottom="58dp" />
+
+        <TextView
+            android:id="@+id/tv_hv"
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true" />
+        <LinearLayout
+            android:id="@+id/ll_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/ll_control"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="20dp">
+
+
+                <ImageView
+                    android:id="@+id/love"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/shape_round_transparent"
+                    android:padding="12dp"
+                    android:src="@drawable/selector_love" />
+
+            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_top"
@@ -139,49 +181,6 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/ll_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/ll_control"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="20dp">
-
-
-                <ImageView
-                    android:id="@+id/love"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/shape_round_transparent"
-                    android:clickable="true"
-                    android:padding="12dp"
-                    android:src="@drawable/selector_love" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <com.veni.tools.view.heart.HeartLayout
-            android:id="@+id/heart_layout"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_alignRight="@+id/tv_hv"
-            android:layout_marginBottom="58dp" />
-
-        <TextView
-            android:id="@+id/tv_hv"
-            android:layout_width="68dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
