--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="google_blue">#4285F4</color>
     <color name="google_green">#34A853</color>
 
+    <color name="alpha_85_white">#d8ffffff</color>
     <color name="alpha_10_black">#1A000000</color>
     <color name="alpha_75_gray">#c08a8a8a</color>
     <color name="alpha_85_colorPrimary">#d8ffc651</color>
