--- a/app/src/main/res/layout/activity_device_info.xml
+++ b/app/src/main/res/layout/activity_device_info.xml
@@ -12,7 +12,7 @@
         android:id="@+id/phone_info_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/bg_toolbar_primary"
         app:title="设备信息" />
 
     <Button
