--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -130,6 +130,61 @@
                 android:layout_height="@dimen/default_px"
                 android:background="@color/e0" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/hight_13">
+
+                <ImageView
+                    android:layout_width="@dimen/hight_18"
+                    android:layout_height="match_parent"
+                    android:src="@mipmap/ic_password_flag" />
+
+                <EditText
+                    android:id="@+id/login_captcha_et"
+                    android:layout_width="@dimen/hight_zero"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="请输入验证码"
+                    android:paddingLeft="@dimen/hight_15"
+                    android:digits="0123456789"
+                    android:inputType="number"
+                    android:maxLength="30"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textColor="@color/darkgray"
+                    android:textColorHint="@color/darkgray"
+                    android:textSize="@dimen/font_14" />
+
+                <ImageView
+                    android:id="@+id/login_clean_captcha"
+                    android:layout_width="@dimen/hight_35"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/hight_10"
+                    android:src="@mipmap/ic_clear"
+                    android:visibility="gone" />
+                <TextView
+                    android:id="@+id/login_get_captcha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/hight_5"
+                    android:layout_marginBottom="@dimen/hight_5"
+                    android:layout_marginRight="@dimen/hight_8"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/hight_15"
+                    android:paddingRight="@dimen/hight_15"
+                    android:text="获取验证码"
+                    android:textSize="@dimen/font_14"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_px"
+                android:background="@color/e0" />
+
             <Button
                 android:id="@+id/login_btn"
                 android:layout_width="match_parent"
@@ -141,34 +196,9 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_18" />
 
-            <LinearLayout
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/login_regist"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginBottom="@dimen/hight_10"
-                    android:layout_weight="1"
-                    android:text="注册新用户"
-                    android:textColor="#b0b8b2"
-                    android:textSize="@dimen/font_14" />
-
-                <TextView
-                    android:id="@+id/login_forget_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginBottom="@dimen/hight_10"
-                    android:layout_marginLeft="@dimen/hight_20"
-                    android:text="忘记密码"
-                    android:textColor="#b0b8b2"
-                    android:textSize="@dimen/font_14" />
-            </LinearLayout>
-
+                android:layout_height="@dimen/hight_20"/>
         </LinearLayout>
 
     </ScrollView>
