--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/login_root_iv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,152 +39,88 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <com.veni.tools.view.ClearableEditText
+                android:id="@+id/login_mobile_et"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="@dimen/hight_55"
                 android:layout_marginTop="200dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/hight_13">
-
-                <ImageView
-                    android:layout_width="@dimen/hight_18"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_mobile_flag" />
-
-                <EditText
-                    android:id="@+id/login_mobile_et"
-                    android:layout_width="@dimen/hight_zero"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:hint="请输入用户名"
-                    android:inputType="textVisiblePassword"
-                    android:maxLength="11"
-                    android:paddingLeft="@dimen/hight_15"
-                    android:singleLine="true"
-                    android:text=""
-                    android:textColor="@color/darkgray"
-                    android:textColorHint="@color/darkgray"
-                    android:textSize="@dimen/font_14" />
-
-                <ImageView
-                    android:id="@+id/login_clean_phone"
-                    android:layout_width="@dimen/hight_35"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/hight_10"
-                    android:src="@mipmap/ic_clear"
-                    android:visibility="gone" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/default_px"
-                android:background="@color/e0" />
+                android:background="@drawable/underline_gray"
+                android:drawableLeft="@mipmap/ic_mobile_flag"
+                android:drawablePadding="@dimen/hight_15"
+                android:drawableRight="@mipmap/ic_clear"
+                android:hint="请输入用户名"
+                android:inputType="numberSigned"
+                android:maxLength="11"
+                android:paddingLeft="@dimen/hight_15"
+                android:paddingRight="@dimen/hight_15"
+                android:singleLine="true"
+                android:textColor="@color/darkgray"
+                android:textColorHint="@color/darkgray"
+                android:textSize="@dimen/font_14"
+                app:left_drawable_color="@color/deep_gray_2"
+                app:right_drawable_color="@color/gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="@dimen/hight_55"
+                android:background="@drawable/underline_gray"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/hight_13">
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="@dimen/hight_18"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_password_flag" />
-
-                <EditText
-                    android:id="@+id/login_password_et"
-                    android:layout_width="@dimen/hight_zero"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:hint="请输入密码"
-                    android:paddingLeft="@dimen/hight_15"
-                    android:inputType="textPassword"
-                    android:maxLength="30"
-                    android:singleLine="true"
-                    android:text=""
-                    android:textColor="@color/darkgray"
-                    android:textColorHint="@color/darkgray"
-                    android:textSize="@dimen/font_14" />
-
-                <ImageView
-                    android:id="@+id/login_clean_password"
-                    android:layout_width="@dimen/hight_35"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/hight_10"
-                    android:src="@mipmap/ic_clear"
-                    android:visibility="gone" />
-
-                <ImageView
-                    android:id="@+id/login_show_pwd"
-                    android:layout_width="@dimen/hight_35"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/hight_10"
-                    android:src="@mipmap/pass_gone" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/default_px"
-                android:background="@color/e0" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/hight_13">
-
-                <ImageView
-                    android:layout_width="@dimen/hight_18"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_password_flag" />
-
-                <EditText
+                <com.veni.tools.view.ClearableEditText
                     android:id="@+id/login_captcha_et"
                     android:layout_width="@dimen/hight_zero"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/hight_55"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:drawableLeft="@mipmap/ic_captcha_flag"
+                    android:drawablePadding="@dimen/hight_15"
+                    android:drawableRight="@mipmap/ic_clear"
                     android:hint="请输入验证码"
+                    android:inputType="numberSigned"
+                    android:maxLength="11"
                     android:paddingLeft="@dimen/hight_15"
-                    android:digits="0123456789"
-                    android:inputType="number"
-                    android:maxLength="30"
+                    android:paddingRight="@dimen/hight_15"
                     android:singleLine="true"
-                    android:text=""
                     android:textColor="@color/darkgray"
                     android:textColorHint="@color/darkgray"
-                    android:textSize="@dimen/font_14" />
+                    android:textSize="@dimen/font_14"
+                    app:left_drawable_color="@color/deep_gray_2"
+                    app:right_drawable_color="@color/gray" />
 
-                <ImageView
-                    android:id="@+id/login_clean_captcha"
-                    android:layout_width="@dimen/hight_35"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/hight_10"
-                    android:src="@mipmap/ic_clear"
-                    android:visibility="gone" />
                 <TextView
                     android:id="@+id/login_get_captcha"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/hight_5"
                     android:layout_marginBottom="@dimen/hight_5"
                     android:layout_marginRight="@dimen/hight_8"
+                    android:layout_marginTop="@dimen/hight_5"
                     android:gravity="center"
                     android:paddingLeft="@dimen/hight_15"
                     android:paddingRight="@dimen/hight_15"
                     android:text="获取验证码"
-                    android:textSize="@dimen/font_14"/>
+                    android:textSize="@dimen/font_14" />
             </LinearLayout>
 
-            <View
+            <com.veni.tools.view.PasswordEditText
+                android:id="@+id/login_password_et"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/default_px"
-                android:background="@color/e0" />
+                android:layout_height="@dimen/hight_55"
+                android:background="@drawable/underline_gray"
+                android:drawableLeft="@mipmap/ic_password_flag"
+                android:drawablePadding="@dimen/hight_15"
+                android:drawableRight="@drawable/ic_visibility_black"
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:maxLength="11"
+                android:paddingLeft="@dimen/hight_15"
+                android:paddingRight="@dimen/hight_15"
+                android:singleLine="true"
+                android:textColor="@color/darkgray"
+                android:textColorHint="@color/darkgray"
+                android:textSize="@dimen/font_14"
+                app:left_drawable_color="@color/deep_gray_2"
+                app:right_drawable_color="@color/gray" />
 
             <Button
                 android:id="@+id/login_btn"
