banner直接引用style后页面不显示

--- a/app/src/main/res/layout/activity_first_start.xml
+++ b/app/src/main/res/layout/activity_first_start.xml
@@ -5,26 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/whitesmoke">
-
-
     <cn.bingoogolapple.bgabanner.BGAGuideLinkageLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <cn.bingoogolapple.bgabanner.BGABanner
             android:id="@+id/banner_guide_background"
-            style="@style/BannerDefaultStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:banner_pageChangeDuration="1000"
             app:banner_pointAutoPlayAble="false"
             app:banner_pointContainerBackground="@android:color/transparent"
-            app:banner_transitionEffect="fade" />
+            app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
+            app:banner_pointTopBottomMargin="15dp"
+            app:banner_transitionEffect="fade"/>
 
         <cn.bingoogolapple.bgabanner.BGABanner
             android:id="@+id/banner_guide_foreground"
-            style="@style/BannerDefaultStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:banner_pageChangeDuration="1000"
             app:banner_pointAutoPlayAble="false"
             app:banner_pointContainerBackground="@android:color/transparent"
-            app:banner_transitionEffect="alpha" />
+            app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
+            app:banner_pointTopBottomMargin="15dp"
+            app:banner_transitionEffect="alpha"/>
     </cn.bingoogolapple.bgabanner.BGAGuideLinkageLayout>
+
 
     <TextView
         android:id="@+id/tv_guide_skip"
