--- a/app/src/main/res/layout/activity_cardgroupview_item_card.xml
+++ b/app/src/main/res/layout/activity_cardgroupview_item_card.xml
@@ -1,59 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/card_item_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_dialog_bg">
+    android:orientation="vertical"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/card_top_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
+        android:layout_height="230dp"
+        android:background="@drawable/top">
+
+        <ImageView
+            android:id="@+id/card_image_view"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_horizontal|bottom"
-            android:text="温馨提示"
-            android:textColor="@color/deep_gray_2"
-            android:textSize="16sp" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <View
+            android:id="@+id/maskView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true" />
 
         <TextView
-            android:id="@+id/item_card_mess"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:padding="15dp"
-            android:drawablePadding="5dp"
-            android:layout_marginBottom="5dp"
+            android:id="@+id/card_pic_num"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="#5f000000"
+            android:drawableLeft="@mipmap/card_photot"
+            android:drawablePadding="4dp"
             android:gravity="center"
-            android:text="111111"
-            android:textColor="@color/deep_gray_2"
-            android:textSize="15sp" />
+            android:paddingLeft="6dp"
+            android:paddingRight="4dp"
+            android:text="6"
+            android:textColor="#fff" />
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/card_bottom_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom"
+        android:paddingTop="10dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/light_gray" />
+            android:id="@+id/card_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="叶琪琪 23"
+            android:textColor="#111"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/card_other_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/card_user_name"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:paddingBottom="16dp"
+            android:text="其它 6km4"
+            android:textColor="#888" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="3dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/item_card_rightbtn"
-                android:layout_width="0dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="取消"
-                android:textColor="@color/gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/card_left1"
+                android:drawablePadding="2dp"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="#999"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/card_like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:drawableLeft="@mipmap/card_left2"
+                android:drawablePadding="2dp"
+                android:gravity="center_horizontal"
+                android:text="2"
+                android:textColor="#999"
                 android:textSize="15sp" />
         </LinearLayout>
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
