--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffc651</color>
-    <color name="colorPrimaryDark">#FFFF9D00</color>
+    <color name="colorPrimary">#4285F4</color>
+    <color name="colorPrimaryDark">#3773d7</color>
     <color name="colorAccent">#FF4081</color>
 
 
@@ -17,6 +17,6 @@
     <color name="alpha_85_white">#d8ffffff</color>
     <color name="alpha_10_black">#1A000000</color>
     <color name="alpha_75_gray">#c08a8a8a</color>
-    <color name="alpha_85_colorPrimary">#d8ffc651</color>
-    <color name="alpha_75_colorPrimary">#c0ffc651</color>
+    <color name="alpha_85_colorPrimary">#d84285F4</color>
+    <color name="alpha_75_colorPrimary">#c04285F4</color>
 </resources>
