--- a/app/src/main/res/layout/fragment_persional_item_wave_contact.xml
+++ b/app/src/main/res/layout/fragment_persional_item_wave_contact.xml
@@ -63,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:text="15912385201"
+                    android:text="159********"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
             </LinearLayout>
