#商品数量加减控件 设置数值为负数时的调整

--- a/app/src/main/res/layout/fragment_trade.xml
+++ b/app/src/main/res/layout/fragment_trade.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/whitesmoke"
     android:orientation="vertical">
 
@@ -11,26 +11,44 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/bg_toolbar_primary"
-        app:title="添加购物车"
         app:leftIconVisibility="false"
+        app:title="添加购物车"
         app:titleColor="@color/white" />
 
-
-    <com.veni.tools.view.ticker.TickerView
-        android:id="@+id/trade_made_count"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/trade_refreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/darkgray"
-        android:textSize="50sp"
-        app:ticker_animationDuration="500" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        app:srlAccentColor="@android:color/white"
+        app:srlEnableHeaderTranslationContent="true"
+        app:srlEnableNestedScrolling="true"
+        app:srlEnablePreviewInEditMode="true"
+        app:srlPrimaryColor="@color/colorPrimary">
 
-    <com.veni.tools.view.ShoppingView
-        android:id="@+id/trade_sv_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center"
-        app:sv_bg_color="#CD5555"
-        app:sv_text="点击购买"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.veni.tools.view.ticker.TickerView
+                android:id="@+id/trade_made_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/darkgray"
+                android:textSize="50sp"
+                app:ticker_animationDuration="500" />
+
+            <com.veni.tools.view.ShoppingView
+                android:id="@+id/trade_sv_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                app:sv_bg_color="#CD5555"
+                app:sv_text="点击购买" />
+        </LinearLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 </LinearLayout>
